# sms-campaigns-generation

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  FlowBuilder_Node_Formats_by_Stages.md  Makefile  README.md  Research.md  campaign-test-ui.html  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  evaluation_results_20251030_110005.json  format_json_flowbuilder.md  plan.MD  pyproject.toml  requirements-dev.txt  requirements.txt  run_evaluation.py  sample.json  segment_node_analysis.md  simple_eval.py  solution_report.md  system_improvement_plan.md  test_case.json  validate_final_coverage.py
.github/workflows/: ci-cd.yml
docs/: DEPLOYMENT.md  OPENROUTER_INTEGRATION.md  TRAINING_PROGRAM.md  USER_GUIDE.md
k8s/: configmaps.yaml  deployments.yaml  namespace.yaml  secrets.yaml
migrations/: ai_campaign_schema_migration.sql
monitoring/: alerts.yml  prometheus.yml
scripts/: backup.sh  init-db.sql  restore.sh
src/: __init__.py  main.py
src/api/: __init__.py  documentation.py  main.py
src/api/endpoints/: __init__.py  campaigns.py  database.py  health.py
src/api/middleware/: __init__.py  auth.py  error_handlers.py  tracking.py
src/api/v1/: campaigns.py
src/core/: __init__.py  config.py  database.py  logging.py
src/models/: __init__.py  campaign.py  campaign_generation.py  database.py  database_original.py  flow_schema.py  requests.py
src/observability/: metrics.py
src/security/: authentication.py
src/services/: __init__.py  embeddings.py
src/services/campaign_generation/: __init__.py  advanced_template_engine.py  behavioral_targeting.py  generator.py  input_extractor.py  llm_extractor.py  orchestrator.py  planner.py  scheduling_engine.py  template_manager.py
src/services/campaign_prompts/: __init__.py  generator_prompts.py  planner_prompts.py
src/services/campaign_transformation/: __init__.py  schema_transformer.py
src/services/campaign_validation/: __init__.py  best_practices_checker.py  flow_validator.py  optimization_engine.py  schema_validator.py  validator.py
src/services/database/: campaign_logger.py
src/services/llm_engine/: __init__.py  llm_client.py  prompt_builder.py  response_parser.py  schema_transformer.py
src/services/validation/: __init__.py  auto_corrector.py  flow_validator.py  flowbuilder_schema.py  reporting.py  schema_validator.py  validator.py
src/utils/: __init__.py  constants.py
static/: campaign-tester.html  index.html  quickstart.html
tests/: test_generation_flow.py
tests/integration/: test_api_integration.py
tests/performance/: test_load.py
tests/security/: test_security.py
tests/unit/: test_llm_engine.py  test_models.py  test_validation.py
